# sit-dolby

./: .gitignore  LICENSE.md  README.md  pyproject.toml
config/: dummy.toml
repos/FastNSF/: optimization.py
repos/Neural_Scene_Flow_Prior/: README.md  preprocess_sf_argoverse.py  preprocess_sf_nuscenes.py  requirements.txt  visualize.py
repos/VoxFormer/projects/configs/voxformer/: voxformer-T.py
repos/VoxFormer/projects/mmdet3d_plugin/voxformer/apis/: test.py
repos/VoxFormer/projects/mmdet3d_plugin/voxformer/dense_heads/: voxformer_head.py
repos/VoxFormer/projects/mmdet3d_plugin/voxformer/detectors/: __init__.py  voxformer.py
repos/VoxFormer/projects/mmdet3d_plugin/voxformer/modules/: __init__.py  deformable_cross_attention.py  deformable_self_attention.py  deformable_self_attention_3D_custom.py  encoder.py  encoder_3D.py  multi_scale_deformable_attn_3D_custom_function.py  transformer.py  transformer_3D.py
src/sit_dolby/: __main__.py  cli.py
src/sit_dolby/config/: __init__.py  base_config.py  experiment_config.py
src/sit_dolby/models/FastNSF/: opt_linear.py  optimization.py
src/sit_dolby/utils/: __init__.py  console.py
